src/components/View/Marks/style.scss
.marks{
    width: 100%;    
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;    
    &-title{
        text-align: center;
    }    
    &-content{
        height: auto;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;        
    }
    &-link{
        &:hover{
        text-decoration: none;
        }
    }
    &-card{
        width: 20rem;
        height: 27rem;
        box-shadow: black 0.5em 0.5em 0.5em;
        margin: 1.5rem 1rem;        
    }
    &-img{
        width: auto;
        height: 240px;
    }
    &-body{
        display: flex;
        flex-direction: column;
        position: relative;
    }    
    &-title, &-titles, &-text{
        color: black;
        font-family: 'Truculenta', sans-serif;

    }
    &-button{
        position: absolute;
        top: 145px;
        left: 20px;
        color: white;
        background-color: #83992b;
        border: none;        
        border-radius: 10px;
        padding: 0rem 1rem 0.2rem 1rem;
        font-weight: bold;
        text-shadow: black 0.1em 0.1em 0.2em;
        box-shadow: black 0.1em 0.1em 0.2em;
        transition: color 0.8s, background-color 0.5s;        
        &:hover {
            color: #C9EA44;
            background-color: #617023;          
        }        
    }
}

// Media Queries

@media(max-width:480px){
    .marks{
        margin: 2rem 0;
        &-title{
            text-align: center;
            font-size: 1.1rem;
        }
        &-content{
            margin:0;
        }
        &-img{            
            height: 130px;
        }
        &-card{
            width: 10rem;
            height: 18rem;
            margin: 0.3rem;
        }
        &-button{
            display: none;
        }
    }
}

